# Robot_Manipulation_ws13

./: CMakeLists.txt  README.md
src/fksolver/: FKSolver.h  FKSolverTester.cpp  fksolver.cpp  forward_kinematic_solver.cpp
src/kdl_kinematic_solver/: kdl_kinematic_solver_test.cpp
youbot/bosch_drivers/.svn/: wc.db
youbot/bosch_drivers/adc_driver/: CMakeLists.txt
youbot/bosch_drivers/adc_driver/src/: adc_driver.cpp
youbot/bosch_drivers/arduino_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
youbot/bosch_drivers/arduino_interface/arduino_firmware/: bosch_arduino_interface.ino
youbot/bosch_drivers/bma180_driver/: CMakeLists.txt  manifest.xml
youbot/bosch_drivers/bmc050_driver/: CMakeLists.txt  mainpage.dox
youbot/bosch_drivers/bmc050_driver/src/: bmc050_parameters.cpp
youbot/bosch_drivers/bmg160_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
youbot/bosch_drivers/bmg160_driver/src/: bmg160.cpp  bmg160_parameters.cpp
youbot/bosch_drivers/bmp085/: manifest.xml
youbot/bosch_drivers/bmp085/msg/: bmp085_measurement.msg
youbot/bosch_drivers/bmp085_driver/: mainpage.dox  manifest.xml
youbot/bosch_drivers/bmp085_driver/src/: bmp085_parameters.cpp
youbot/bosch_drivers/bosch_drivers_basic_nodes/: manifest.xml
youbot/bosch_drivers/bosch_drivers_basic_nodes/src/: bmc050_node.cpp  encoder_node.cpp  gpio_node.cpp  pwm_node.cpp
youbot/bosch_drivers/bosch_drivers_example_nodes/: CMakeLists.txt
youbot/bosch_drivers/bosch_drivers_example_nodes/src/: example_bmc050.cpp
youbot/bosch_drivers/encoder_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
youbot/bosch_drivers/gpio_driver/: mainpage.dox  manifest.xml
youbot/bosch_drivers/pwm_driver/: CMakeLists.txt  mainpage.dox
youbot/bosch_drivers/sub20_interface/: mainpage.dox
youbot/bosch_drivers/uniserial/: CMakeLists.txt  mainpage.dox
youbot/doc-robocupatwork/: Manipulation test  frames.gv
youbot/youbot help folder/: commands to run  project youbot  terminal command history 
(+49 files in other folders)
